# redskull

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  release-plz.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: update-docs.sh
.github/workflows/: publish.yml  release-plz.yml  tests.yml
ci/: check.sh
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
src/lib/: build_script.rs  conda.rs  crate_inspector.rs  github_graphql.rs  license_family.rs  mod.rs  recipe.rs  recipe_builder.rs  renderer.rs  runtime_deps.rs  source.rs  sys_deps.rs
tests/: tier1.rs  tier2.rs  tier3.rs
tests/common/: mod.rs
